tests/errors/lex_test_01_invalid_name.py
# lex_test1.py
def main():
    var_! = 5
    print(var_!)

main()
